overflow fix

--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,10 @@ section{
     display: inline-block;
     padding: 1rem 1rem;
     width: 47%;
-    height: 90vh;
+    height: 92%;
     vertical-align: middle;
     position: absolute;
+    overflow: auto;
 }
 .section-1{
     border: 3px solid green;
